--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,14 @@
                     <a href="#" class="simple-text logo-normal">Code Harbor</a>
                 </div>
                 <ul class="nav">
-                    <li><a href="#"><i class="bi bi-gear"></i>
-                        <p>Settings</p></a></li>
+                    <li><a href="{% url 'guidelines' %}"><i class="bi-card-list"></i>
+                        <p>Guidelines</p></a></li>
+                    <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="bi bi-graph-up"></i>
+                        <p>Java WCC Calculator</p></a></li>
+                    <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i class="bi bi-graph-up"></i>
+                        <p>C# WCC Calculator</p></a></li>
+                    <li><a href="{% url 'calculate_complexity-excel' %}"><i class="bi bi-graph-up"></i>
+                        <p>Statical Analysis</p></a></li>
                     <li><a href="#"><i class="bi bi-box-arrow-right"></i>
                         <p>Logout</p></a></li>
                 </ul>
