--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
 
     <!-- Toastify CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Toastify JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
@@ -39,9 +40,9 @@
                 <ul class="nav">
                     <li><a href="{% url 'guidelines' %}"><i class="bi-card-list"></i>
                         <p>Guidelines</p></a></li>
-                    <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="bi bi-graph-up"></i>
+                    <li><a href="{% url 'calculate_complexity_line_by_line' %}"><i class="fa-brands fa-java"></i>
                         <p>Java WCC Calculator</p></a></li>
-                    <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i class="bi bi-graph-up"></i>
+                    <li><a href="{% url 'calculate_complexity_line_by_line_csharp' %}"><i class="fa-brands fa-microsoft"></i>
                         <p>C# WCC Calculator</p></a></li>
                     <li><a href="{% url 'calculate_complexity-excel' %}"><i class="bi bi-graph-up"></i>
                         <p>Statical Analysis</p></a></li>
